--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -77,6 +77,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <th>Description</th>
 <th>Image</th>
 <th>Notes</th>
+<th>Costs/Supplier</th>
 </tr>
 <tr class = "homemade">
 <td>1</td> <!--id-->
@@ -84,6 +85,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">CNC milled - <a href="drawings/cube.pdf">Technical drawing</a></div> Modified dimensions and threaded holes to mount the piezo positioner on. Handy knob and magnets to keep door shut without screws.</td> <!--description-->
 <td><img src="images/cube_amolf.png" class="fancybox" id=1></td> <!--image-->
 <td style="vertical-align: middle;">Possible improvement: decreasing the distance from excitation beam port to dichroic filter cube, such that also TIRF lenses with smaller focal length can be used, resulting in a bigger illuminated field-of-view</td> <!--notes-->
+<td style="vertical-align: middle;">1000€<br>in-house</td> <!--costs-->
 </tr>
 <tr>
 <td>2</td> <!--id-->
@@ -91,6 +93,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle"><a href="https://www.smaract.com/linear-stages/type/SLS-52x">Smaract SLS-5252</a> linear stage with a <a href="https://www.smaract.com/control-systems-and-software/product/mcs2">MCS2 controller.</a></div></td> <!--description-->
 <td><img src="images/smaract_stage.png" class="fancybox" id=2></td></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">10.000€<br>(Smaract)</td> <!--costs-->
 </tr>
 <tr class="homemade">
 <td>3</td> <!--id-->
@@ -98,6 +101,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">CNC milled - <a href="drawings/sampleholder.pdf">Technical drawing</a></div> Sample holder for standard coverslips (22x60mm, 26x76mm) with magnets to keep sample in place</td> <!--description-->
 <td><img src="images/sampleholder.png" class="fancybox" id=3></td></td> <!--image-->
 <td style="vertical-align: middle;">Smaract piezo stage is tared with respect to sample holder weight by adding a constant force spring during stage assembly.</td> <!--notes-->
+<td style="vertical-align: middle;">100€<br>in-house</td> <!--costs-->
 </tr>
 <tr>
 <td>4</td> <!--id-->
@@ -105,6 +109,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle"><a href="https://www.nikoninstruments.com/en_EU/Products/Optics/Apochromat-Objectives/CFI-Plan-Apochromat-TIRF-Series">Nikon TIRF 1.49NA 60x</a> objective</div></td> <!--description-->
 <td><img src="images/nikon60x.png" class="fancybox" id=4></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">9000€<br>Nikon</td> <!--costs-->
 </tr>
 <tr class = "homemade">
 <td>5</td> <!--id-->
@@ -112,6 +117,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">CNC-milled <a href="drawings/thermal_spacer.pdf">Technical drawing</a></div> POM spacer with M25 x 0.75 internal and external threads for thermal insulation of the heated objective </td> <!--description-->
 <td><img src="images/thermal_spacer2.png" class="fancybox" id=5></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">in-house<br>5€</td> <!--costs-->
 </tr>
 <tr>
 <td>6</td> <!--id-->
@@ -119,6 +125,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle"><a href="https://www.omega.nl/pptst/KHRA-KHLVA-KHA-SERIES.html">Omega KHLVA-104/10</a> polyimide film flexible heater</div> Wrapped around the objective and fixed with adhesive kapton foil. See <a href="https://www.instructables.com/Objective-heater/">Objective Heater Instructable</a> </td> <!--description-->
 <td><img src="images/heaterfoil2.png" class="fancybox" id=6></td> <!--image-->
 <td style="text-align: center;"><img src="images/calibration_sensor.png" class="fancybox" id=7> Dip-in sensor to calibrate offset of objective temperature to sample temperature</td> <!--notes-->
+<td style="vertical-align: middle;">60€<br>Omega engineering</td> <!--costs-->
 </tr>
 <tr class = "homemade">
 <td>7</td> <!--id-->
@@ -126,6 +133,8 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">Custom design based on <a href="http://www.ia.omron.com/products/family/3101/">Omron E5CC</a> PID temperature controller</div> Heats the polyimide film around the objective and senses temperature using PT100 sensors  </td> <!--description-->
 <td><img src="images/heatcontroller.png" class="fancybox" id=7></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">300€<br>Omron/in-house</td> <!--costs-->
+
 </tr>
 <tr class="homemade">
 <td>8</td> <!--id-->
@@ -133,6 +142,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">Custom made - Technical drawings: <a href="drawings/housing_assembly.pdf">Assembly</a>, <a href="drawings/housing_basis.pdf">basis</a>, <a href="drawings/housing_lid.pdf">lid</a> and <a href="drawings/housing_spacer.pdf">spacer</a></div> Protects sample and objective from dust and airflow and improves temperature stability. Including a LED ring for brightfield imaging</td> <!--description-->
 <td><img src="images/housing.png" class="fancybox" id=8></td></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">100€<br>in-house</td> <!--costs-->
 </tr>
 <tr>
 <td>9</td> <!--id-->
@@ -140,6 +150,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=DFM1/M">DFM1/M</a></div>Magnetic hot-swappable dichroic mirror is placed inside.</td> <!--description-->
 <td><img src="https://www.thorlabs.de/images/large/TTN042093-lrg.jpg" class="fancybox" id=9></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">360€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr class ="homemade">
 <td>10</td> <!--id-->
@@ -147,6 +158,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">Custom made - <a href="drawings/dichroic_distance.pdf">Technical drawing</a></div></td> <!--description-->
 <td><img src="images/dichroic_distance_loc.png" class="fancybox" id=10></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">10€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <td>11</td> <!--id-->
@@ -154,6 +166,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">Chroma - <a href="https://www.chroma.com/products/parts/zt405-488-561-640rpcv2">ZT405/488/561/640rpc-UF2</a></div></td> <!--description-->
 <td><img src="images/dichroic_square.jpg" class="fancybox" id=11></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">550€<br>Chroma</td> <!--costs-->
 </tr>
 <tr>
 <td>12</td> <!--id-->
@@ -161,6 +174,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=NE60A-A">NE60A-A</a></div>Preventing unwanted back-reflections within the dichroic mirror cube.</td> <!--description-->
 <td><img src="https://www.thorlabs.com/images/large/24285-lrg.jpg" class="fancybox" id=12></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">74€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <tr>
@@ -169,6 +183,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=C4W-CC">C4W-CC</a></div></td> <!--description-->
 <td><img src="https://www.thorlabs.de/images/ProductGallery/C4W-CC/30mm_Cage_Cube_Connector-AV1.jpg" style="transform:scaleY(-1);" class="fancybox" id=13></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">51€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <td>14</td> <!--id-->
@@ -176,6 +191,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=KCB1E/M">KCB1E/M</a> and <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=BBE1-E02">BBE1-E02</a></div>The fixed mirror ensures easy adjustment of position of the emission light on the camera by adjusting the two screws.</td> <!--description-->
 <td><img src="https://www.thorlabs.de/images/large/TTN034520-lrg.jpg" class="fancybox" id=14></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">300€<br>Thorlabs</td> <!--costs-->
 </tr>
 </table>
 
@@ -189,6 +205,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <th>Description</th>
 <th>Image</th>
 <th>Notes</th>
+<th>Costs/Supplier</th>
 </tr>
 <div style="max-width:80%;">Excitation path optics are assembled on a breadboard to bring the beam height up without a periscope. <br>A beam height of 64.7mm above the breadboard will match the main cube opening hole 117.4mm above the main optical table.<br>
 The excitation path is optimized for a flat-top profile illumination of the whole 221um-by-221um field of view.</div>
@@ -199,6 +216,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=P30/M">P30/M</a> posts</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=PS10M">PS10M</a> spacers.</div></td> <!--description-->
 <td><img src="images/breadboard.jpg" class="fancybox" id=20></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">500€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <td>2</td> <!--id-->
@@ -206,6 +224,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SM1FCA">SM1FCA</a> fiber mount in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP33/M">CP33/M</a> cage plate</a></div></td> <!--description-->
 <td><img src="images/fibermount.jpg" class="fancybox" id=21></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">48€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <td>3</td> <!--id-->
@@ -213,6 +232,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td><div class="discTitle">Thorlabs - Collimation lens <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-050-A">AC254-050-A</a> in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a> translating lens mount</div></td> <!--description-->
 <td><img src="images/cxy1.jpg" class="fancybox" id=22></td> <!--image-->
 <td style="vertical-align: middle;">Collimates the input beam to a 1/e2 diameter of 6mm (for 488nm), the required input diameter for the piShaper. A shearing interferometer makes the collimation process easier. <br>See <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/9783527687732.app2"> Heintzmann, Practical Guide to Optical Alignment</a></td> <!--notes-->
+<td style="vertical-align: middle;">250€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <td>4</td> <!--id-->
@@ -220,6 +240,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AQWP05M-600">AQWP05M-600</a> achromatic quarter-wave plate in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=PRM1">PRM1</a> rotation mount</div></td> <!--description-->
 <td><img src="images/rotationmount.jpg" class="fancybox" id=23></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">1085€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <td>5</td> <!--id-->
@@ -227,6 +248,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td><div class="discTitle">AdlOptica - <a href="http://pishaper.com/shaper.html">piShaper 6_6_VIS</a> in <a href="https://www.standa.lt/products/catalog/optical_positioners?item=240&prod=five_axis_optical_mounts">Standa 5KOMA1 mount </a> on kinematic base <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB50/M">KB50/M</a></div>Transforms the gaussian illumination into a flat-top profile</td> <!--description-->
 <td><img src="images/pishaper.png" class="fancybox" id=24></td> <!--image-->
 <td style="vertical-align: middle;"><a href="https://www.nature.com/articles/s41467-019-09064-6">Stehr, Stein et al.</td> <!--notes-->
+<td style="vertical-align: middle;">3300€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <td>6</td> <!--id-->
@@ -234,6 +256,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-100-A">AC254-100-A</a> 100mm and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ACN254-040-A">ACN254-040-A</a> -40mm lenses in a cage system with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a> mounts and a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> kinematic base</div>Magnifies the beam diameter 2.5fold and can be easily swapped or removed due to its magnetic kinematic base. Raised up to 64.7mm beam height with standard adapter plates (<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S7/M">BA2S7/M</a>, <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S6/M">BA2S6/M</a>).</td> <!--description-->
 <td><img src="images/telescope.png" class="fancybox" id=25></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">405€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <td>7</td> <!--id-->
@@ -241,12 +264,14 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td><div class="discTitle">Thorlabs - FRAP lens <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-150-A">AC254-150</a> in a motorized flip mount <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=MFF101/M">MFF101/M </a></div>FRAP lens to focus excitation light in the sample plane for bleaching experiments.</td> <!--description-->
 <td><img src="images/flipmount.jpg" class="fancybox" id=26></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">732€<br>Thorlabs</td> <!--costs-->
 </tr>
 <td>8</td> <!--id-->
 <td id="fancyboxtitle_27">TIRF angle stage</td> <!--title-->
 <td><div class="discTitle">Thorlabs - Motorized stage <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KMTS25E/M">MTS25E/M</a> bundle</div>Motorized control over incident angle to change between TIRF, HILO and epifluorescence illumination</td> <!--description-->
 <td><img src="images/stage.jpg" class="fancybox" id=27></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">1434€<br>Thorlabs</td> <!--costs-->
 </tr>
 <td>9</td> <!--id-->
 <td id="fancyboxtitle_28">TIRF angle cage assembly</td> <!--title-->
@@ -254,19 +279,23 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 </div>Mounting mirror and lens onto one assembly allows to keep the focal point of the TIRF lens to overlap with the objective's back focal plane for all incident angles.</td> <!--description-->
 <td><img src="images/stageassembly.png" class="fancybox" id=28></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">420€<br>Thorlabs</td> <!--costs-->
 </tr>
 <td class="homemade">10</td> <!--id-->
 <td id="fancyboxtitle_29">Cage assembly adapter plate</td> <!--title-->
 <td><div class="discTitle">CNC-milled - <a href="drawings/kmts25e_adapter.pdf">Technical drawing</a></div>Cage assembly is mounted onto the plate with with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP02B"> CP02B mounting brackets</a>  and raised to 64.7mm beam height.</td> <!--description-->
 <td><img src="images/kmts25e_adapter.png" class="fancybox" id=29></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">20€<br>in-house</td> <!--costs-->
+
 </tr>
 <tr>
 <td>11</td> <!--id-->
 <td id="fancyboxtitle_30">TIRF lens</td> <!--title-->
-<td><div class="discTitle">Edmund Optics - <a href="https://www.edmundoptics.com/">LENS ACH 25x250 VIS 0 Inked</a></div>TIRF lens in CXY1Q mount (alternative: <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a>) to focus excitation light on back-focal plane of objective. 250mm focal length.</td> <!--description-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-250-A">AC254-250-A</a></div>TIRF lens in CXY1Q mount (alternative: <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a>) to focus excitation light on back-focal plane of objective. 250mm focal length.</td> <!--description-->
 <td><img src="images/tirflens.png" class="fancybox" id=30></td> <!--image-->
 <td></td> <!--notes-->
+<td style="vertical-align: middle;">76€<br>in-house</td> <!--costs-->
 </tr>
 </table>
 
