--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -253,7 +253,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <tr>
 <td>6</td> <!--id-->
 <td id="fancyboxtitle_25">2.5x beam expander</td> <!--title-->
-<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-100-A">AC254-100-A</a> 100mm and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ACN254-040-A">ACN254-040-A</a> -40mm lenses in a cage system with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1A">CXY1A</a> mounts and a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> kinematic base</div>Magnifies the beam diameter 2.5fold and can be easily swapped or removed due to its magnetic kinematic base. Raised up to 64.7mm beam height with standard adapter plates (<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S7/M">BA2S7/M</a>, <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S6/M">BA2S6/M</a>).</td> <!--description-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-100-A">AC254-100-A</a> 100mm and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ACN254-040-A">ACN254-040-A</a> -40mm lenses in a cage system with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1A">CXY1A</a> mounts and a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> kinematic base</div>Magnifies the beam diameter 2.5fold and can be easily swapped or removed due to its magnetic kinematic base. Raised up to 64.7mm beam height with standard adapter plates (<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S7/M">BA2S7/M</a>, <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S5/M">BA2S5/M</a>).</td> <!--description-->
 <td><img src="images/telescope.png" class="fancybox" id=25></td> <!--image-->
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">405€<br>Thorlabs</td> <!--costs-->
@@ -336,12 +336,12 @@ restricts the image horizontally so up to three separate, spatially identical im
 </tr>
 <tr>
 <td>4</td> <!--id-->
-<td id="fancyboxtitle_42">4f system</td> <!--title-->
+<td id="fancyboxtitle_42">4f assembly</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC508-300-A">2" AC508-300-A</a> lens in a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=LM2XY/M">LMXY2</a> mount 
 and three <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-300-A">1" AC254-300-A lenses</a> in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=LMR1/M"> LMR1/M</a> fixed lens mounts.</div>
 4f-system to gain enough space to include dichroic mirrors and filters for separating the color channels.</td> <!--description-->
 <td><img src="images/emission_splitter_close.png" class="fancybox" id=42></td> <!--image-->
-<td><img src="images/4fsystem.jpg" class="fancybox" id=42>Three individual lenses make it easy to ensure focusing  of the same z-plane for the different wavelengths. Lenses can be moved along the optical path using <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=DT12/M">dovetail translation stages</a> mounted on rails.</td> <!--notes-->
+<td><img src="images/4fsystem.jpg" class="fancybox" id=42>Three individual lenses make it easy to ensure focusing  of the same z-plane for the different wavelengths. Lenses are mounted on rail carriers equipped with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=DT12/M">dovetail translation stages</a> for focus fine-adjustment.</td> <!--notes-->
 <td style="vertical-align: middle;">555€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
