--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -158,7 +158,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td><div class="discTitle">Custom made - <a href="drawings/dichroic_distance.pdf">Technical drawing</a></div></td> <!--description-->
 <td><img src="images/dichroic_distance_loc.png" class="fancybox" id=10></td> <!--image-->
 <td></td> <!--notes-->
-<td style="vertical-align: middle;">10€<br>Thorlabs</td> <!--costs-->
+<td style="vertical-align: middle;">10€<br>in-house</td> <!--costs-->
 </tr>
 <tr>
 <td>11</td> <!--id-->
@@ -572,6 +572,26 @@ Alignment tips:<br>
 <td style="vertical-align: middle;">Useful tool for checking collimation of fiber output, as well as aligning the emission pathway in combination with the Gustafsson alignment tool.</td> <!--notes-->
 <td style="vertical-align: middle;">454€<br>Thorlabs</td> <!--costs-->
 </tr>
+<td>3</td> <!--id-->
+<td id="fancyboxtitle_81">Cage alignment plate</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CPA1">CPA1</a></div> </td> <!--description-->
+<td><img src="images/shear_plate.png" class="fancybox" id=82></td> <!--image-->
+<td style="vertical-align: middle;">Useful tool for checking centering of beams in cage systems.</td> <!--notes-->
+<td style="vertical-align: middle;">454€<br>Thorlabs</td> <!--costs-->
+</tr>
+<td>4</td> <!--id-->
+<td id="fancyboxtitle_81">Shear plate</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SI100">SI100</a></div>For beam diameters of 5-10 mm </td> <!--description-->
+<td><img src="images/shear_plate.png" class="fancybox" id=82></td> <!--image-->
+<td style="vertical-align: middle;">Useful tool for checking collimation of fiber output, as well as aligning the emission pathway in combination with the Gustafsson alignment tool.</td> <!--notes-->
+<td style="vertical-align: middle;">454€<br>Thorlabs</td> <!--costs-->
+</tr>
+
+
+
+
+
+
 </table>
 
 
