--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -492,7 +492,7 @@ Alignment tips:<br>
 </tr>
 <tr>
 <td>9</td> <!--id-->
-<td id="fancyboxtitle_59">IR viewing disk</td> <!--title-->
+<td id="fancyboxtitle_59">IR alignment disk</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=VRC2D1">VRC2D1</a> mounted in cage plate or small lens tube</div> Indispensable for the alignment procedure</td> <!--description-->
 <td><img src="images/irdisk.jpg" class="fancybox" id=59></td> <!--image-->
 <td></td> <!--notes-->
@@ -568,28 +568,59 @@ Alignment tips:<br>
 <td>2</td> <!--id-->
 <td id="fancyboxtitle_81">Shear plate</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SI100">SI100</a></div>For beam diameters of 5-10 mm </td> <!--description-->
-<td><img src="images/shear_plate.png" class="fancybox" id=82></td> <!--image-->
+<td><img src="images/shear_plate.png" class="fancybox" id=81></td> <!--image-->
 <td style="vertical-align: middle;">Useful tool for checking collimation of fiber output, as well as aligning the emission pathway in combination with the Gustafsson alignment tool.</td> <!--notes-->
 <td style="vertical-align: middle;">454€<br>Thorlabs</td> <!--costs-->
 </tr>
 <td>3</td> <!--id-->
-<td id="fancyboxtitle_81">Cage alignment plate</td> <!--title-->
+<td id="fancyboxtitle_82">Cage alignment plate</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CPA1">CPA1</a></div> </td> <!--description-->
-<td><img src="images/shear_plate.png" class="fancybox" id=82></td> <!--image-->
+<td><img src="images/cageplate.jpg" class="fancybox" id=82></td> <!--image-->
 <td style="vertical-align: middle;">Useful tool for checking centering of beams in cage systems.</td> <!--notes-->
-<td style="vertical-align: middle;">454€<br>Thorlabs</td> <!--costs-->
+<td style="vertical-align: middle;">14€<br>Thorlabs</td> <!--costs-->
 </tr>
 <td>4</td> <!--id-->
-<td id="fancyboxtitle_81">Shear plate</td> <!--title-->
-<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SI100">SI100</a></div>For beam diameters of 5-10 mm </td> <!--description-->
-<td><img src="images/shear_plate.png" class="fancybox" id=82></td> <!--image-->
-<td style="vertical-align: middle;">Useful tool for checking collimation of fiber output, as well as aligning the emission pathway in combination with the Gustafsson alignment tool.</td> <!--notes-->
-<td style="vertical-align: middle;">454€<br>Thorlabs</td> <!--costs-->
+<td id="fancyboxtitle_83">Cage alignment plate</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CPA3">CPA3</a></div> </td> <!--description-->
+<td><img src="images/cageplate2.jpg" class="fancybox" id=82></td> <!--image-->
+<td style="vertical-align: middle;">Useful tool for checking centering of beams in cage systems using the back reflection of lenses.</td> <!--notes-->
+<td style="vertical-align: middle;">14€<br>Thorlabs</td> <!--costs-->
 </tr>
-
-
-
-
+<td>5</td> <!--id-->
+<td id="fancyboxtitle_84">Fluorescent cage alignment plate with hole</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ADF4">ADF4</a></div> </td> <!--description-->
+<td><img src="images/fluoalignmentdisk.jpg" class="fancybox" id=83></td> <!--image-->
+<td style="vertical-align: middle;">Useful tool for checking centering of beams using the back reflection of lenses.</td> <!--notes-->
+<td style="vertical-align: middle;">8€<br>Thorlabs</td> <!--costs-->
+</tr>
+<td>6</td> <!--id-->
+<td id="fancyboxtitle_85">Fluorescent cage alignment plate</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ADF9">ADF9</a></div> </td> <!--description-->
+<td><img src="images/fluoalignmentdisk2.jpg" class="fancybox" id=84></td> <!--image-->
+<td style="vertical-align: middle;">Useful tool for checking centering of beams.</td> <!--notes-->
+<td style="vertical-align: middle;">8€<br>Thorlabs</td> <!--costs-->
+</tr>
+<td>7</td> <!--id-->
+<td id="fancyboxtitle_86">Alignment disk</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SM1A7">SM1A7</a></div>To mount on the camera C-mount with a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SM1A9Adapter with External C-">C-mount-SM1 adapter</a></td> <!--description-->
+<td><img src="images/alignmentdisk.jpg" class="fancybox" id=85></td> <!--image-->
+<td style="vertical-align: middle;">For the alignment of the camera.</td> <!--notes-->
+<td style="vertical-align: middle;">38€<br>Thorlabs</td> <!--costs-->
+</tr>
+<td>8</td> <!--id-->
+<td id="fancyboxtitle_86">Fluorescent Microscope Slide</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=FSK2">FSK2</a></div></td> <!--description-->
+<td><img src="images/fluoslide.jpg" class="fancybox" id=85></td> <!--image-->
+<td style="vertical-align: middle;">For the alignment of the detection path.</td> <!--notes-->
+<td style="vertical-align: middle;">5€<br>Thorlabs</td> <!--costs-->
+</tr>
+<td>9</td> <!--id-->
+<td id="fancyboxtitle_87">Resolution target</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=R1L3S10P">R1L3S10P</a></div></td> <!--description-->
+<td><img src="images/resolutiontarget.jpg" class="fancybox" id=85></td> <!--image-->
+<td style="vertical-align: middle;">To determine the effective pixel size/magnification of the setup.</td> <!--notes-->
+<td style="vertical-align: middle;">108€<br>Thorlabs</td> <!--costs-->
+</tr>
 
 
 </table>
