--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -193,6 +193,14 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">300€<br>Thorlabs</td> <!--costs-->
 </tr>
+<tr>
+<td>15</td> <!--id-->
+<td id="fancyboxtitle_15">Quad-band emision filter</td> <!--title-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.chroma.com/products/parts/zet405-488-561-640mv2">ZET405/488/561/640mv2</a></div>Filtering residual excitation laser light from back reflections at the sample.</td> <!--description-->
+<td><img src="images/quadband.jpg" class="fancybox" id=14></td> <!--image-->
+<td></td> <!--notes-->
+<td style="vertical-align: middle;">650€<br>Thorlabs</td> <!--costs-->
+</tr>
 </table>
 
 <h2>Excitation path (II)</h2>
