--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -252,6 +252,14 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 </tr>
 <tr>
 <td>5</td> <!--id-->
+<td id="fancyboxtitle_23">Laser clean-up filter</td> <!--title-->
+<td><div class="discTitle">Chroma - <a href="https://www.chroma.com/products/parts/zet405-488-561-640xv2">ZET405/488/561/640xv2</a> quad-line laser clean-up filter monunted in lens mount or cage plate</div></td> <!--description-->
+<td><img src="images/quadband.jpg" class="fancybox" id=23></td> <!--image-->
+<td></td> <!--notes-->
+<td style="vertical-align: middle;">580€<br>Chroma</td> <!--costs-->
+</tr>
+<tr>
+<td>6</td> <!--id-->
 <td id="fancyboxtitle_24">piShaper</td> <!--title-->
 <td><div class="discTitle">AdlOptica - <a href="http://pishaper.com/shaper.html">piShaper 6_6_VIS</a> in <a href="https://www.standa.lt/products/catalog/optical_positioners?item=240&prod=five_axis_optical_mounts">Standa 5KOMA1 mount </a> on kinematic base <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB50/M">KB50/M</a></div>Transforms the gaussian illumination into a flat-top profile</td> <!--description-->
 <td><img src="images/pishaper.png" class="fancybox" id=24></td> <!--image-->
@@ -259,7 +267,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td style="vertical-align: middle;">3300€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
-<td>6</td> <!--id-->
+<td>7</td> <!--id-->
 <td id="fancyboxtitle_25">2.5x beam expander</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-100-A">AC254-100-A</a> 100mm and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ACN254-040-A">ACN254-040-A</a> -40mm lenses in a cage system with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1A">CXY1A</a> mounts and a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> kinematic base</div>Magnifies the beam diameter 2.5fold and can be easily swapped or removed due to its magnetic kinematic base. Raised up to 64.7mm beam height with standard adapter plates (<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S7/M">BA2S7/M</a>, <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S5/M">BA2S5/M</a>).</td> <!--description-->
 <td><img src="images/telescope.png" class="fancybox" id=25></td> <!--image-->
@@ -267,21 +275,21 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td style="vertical-align: middle;">405€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
-<td>7</td> <!--id-->
+<td>8</td> <!--id-->
 <td id="fancyboxtitle_26">FRAP lens flip mount</td> <!--title-->
 <td><div class="discTitle">Thorlabs - FRAP lens <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-150-A">AC254-150</a> in a motorized flip mount <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=MFF101/M">MFF101/M </a></div>FRAP lens to focus excitation light in the sample plane for bleaching experiments.</td> <!--description-->
 <td><img src="images/flipmount.jpg" class="fancybox" id=26></td> <!--image-->
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">732€<br>Thorlabs</td> <!--costs-->
 </tr>
-<td>8</td> <!--id-->
+<td>9</td> <!--id-->
 <td id="fancyboxtitle_27">TIRF angle stage</td> <!--title-->
 <td><div class="discTitle">Thorlabs - Motorized stage <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KMTS25E/M">MTS25E/M</a> bundle</div>Motorized control over incident angle to change between TIRF, HILO and epifluorescence illumination</td> <!--description-->
 <td><img src="images/stage.jpg" class="fancybox" id=27></td> <!--image-->
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">1434€<br>Thorlabs</td> <!--costs-->
 </tr>
-<td>9</td> <!--id-->
+<td>10</td> <!--id-->
 <td id="fancyboxtitle_28">TIRF angle cage assembly</td> <!--title-->
 <td><div class="discTitle">Thorlabs - Right-angle elliptical mirror mount <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KCB1E/M">KCB1E/M</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1Q">CXY1Q</a> mount on cage rods. 
 </div>Mounting mirror and lens onto one assembly allows to keep the focal point of the TIRF lens to overlap with the objective's back focal plane for all incident angles.</td> <!--description-->
@@ -289,7 +297,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">420€<br>Thorlabs</td> <!--costs-->
 </tr>
-<td class="homemade">10</td> <!--id-->
+<td class="homemade">11</td> <!--id-->
 <td id="fancyboxtitle_29">Cage assembly adapter plate</td> <!--title-->
 <td><div class="discTitle">CNC-milled - <a href="drawings/kmts25e_adapter.pdf">Technical drawing</a></div>Cage assembly is mounted onto the plate with with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP02B"> CP02B mounting brackets</a>  and raised to 64.7mm beam height.</td> <!--description-->
 <td><img src="images/kmts25e_adapter.png" class="fancybox" id=29></td> <!--image-->
@@ -298,7 +306,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 
 </tr>
 <tr>
-<td>11</td> <!--id-->
+<td>12</td> <!--id-->
 <td id="fancyboxtitle_30">TIRF lens</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-250-A">AC254-250-A</a></div>TIRF lens in CXY1Q mount (alternative: <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1A">CXY1A</a>) to focus excitation light on back-focal plane of objective. 250mm focal length.</td> <!--description-->
 <td><img src="images/tirflens.png" class="fancybox" id=30></td> <!--image-->
@@ -597,15 +605,15 @@ Alignment tips:<br>
 <td>5</td> <!--id-->
 <td id="fancyboxtitle_84">Fluorescent cage alignment plate with hole</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ADF4">ADF4</a></div> </td> <!--description-->
-<td><img src="images/fluoalignmentdisk.jpg" class="fancybox" id=83></td> <!--image-->
-<td style="vertical-align: middle;">Useful tool for checking centering of beams using the back reflection of lenses.</td> <!--notes-->
+<td><img src="images/fluoalignmentdisk2.jpg" class="fancybox" id=83></td> <!--image-->
+<td style="vertical-align: middle;">Useful tool for checking centering of beams.</td> <!--notes-->
 <td style="vertical-align: middle;">8€<br>Thorlabs</td> <!--costs-->
 </tr>
 <td>6</td> <!--id-->
 <td id="fancyboxtitle_85">Fluorescent cage alignment plate</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ADF9">ADF9</a></div> </td> <!--description-->
-<td><img src="images/fluoalignmentdisk2.jpg" class="fancybox" id=84></td> <!--image-->
-<td style="vertical-align: middle;">Useful tool for checking centering of beams.</td> <!--notes-->
+<td><img src="images/fluoalignmentdisk.jpg" class="fancybox" id=84></td> <!--image-->
+<td style="vertical-align: middle;">Useful tool for checking centering of beams using the back reflection of lenses.</td> <!--notes-->
 <td style="vertical-align: middle;">8€<br>Thorlabs</td> <!--costs-->
 </tr>
 <td>7</td> <!--id-->
