--- a/K2TIRF/header.html
+++ b/K2TIRF/header.html
@@ -3,6 +3,7 @@
         <ul>
 		<li class="first"><a href="./index.html" target="_self">Main page</a></li>
 		<li class="first"><a href="./component_table.html" target="_self">Parts list</a></li>
+		<li class="first"><a href="https://github.com/GanzingerLab/K2TIRF" target="_self">Scripts</a></li>
 		<li class="first"><a href="./qgfocus.html" target="_self">Focus lock</a></li>
 		<li class="first"><a href="./frap.html" target="_self">FRAP module</a></li>
 		<li class="first"><a href="./about.html" target="_self">About the project</a></li>
