broken smaract link

--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -90,7 +90,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <tr>
 <td>2</td> <!--id-->
 <td id="fancyboxtitle_2">XYZ stage</td> <!--title-->
-<td><div class="discTitle"><a href="https://www.smaract.com/linear-stages/type/SLS-52x">Smaract SLS-5252</a> linear stage with a <a href="https://www.smaract.com/control-systems-and-software/product/mcs2">MCS2 controller.</a></div></td> <!--description-->
+<td><div class="discTitle"><a href="documentation/SLS_525.LLS.pdf">Smaract SLS-5252</a> linear stage with a <a href="https://www.smaract.com/control-systems-and-software/product/mcs2">MCS2 controller.</a></div></td> <!--description-->
 <td><img src="images/smaract_stage.png" class="fancybox" id=2></td></td> <!--image-->
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">10.000€<br>(Smaract)</td> <!--costs-->
